--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>A Website</title>
   <link rel="stylesheet" href="./style.css">
-  <link rel="shortcut icon" href="./favicon_io/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="./favicon/favicon.ico" type="image/x-icon">
 </head>
 <body>
   <!-- simple checkbox toggle courtesy of https://endtimes.dev/no-javascript-dark-mode-toggle/ -->
-  <input id="dark-mode" type="checkbox" />
+  <input id="color-toggle" type="checkbox" title="Toggle dark mode" />
   <div class="theme-wrapper">
     <header>
       <h1>This Header Will Stay Here</h1>
