--- a/index.html
+++ b/index.html
@@ -1,42 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>A Website</title>
-  <link rel="stylesheet" href="./style.css">
-  <link rel="shortcut icon" href="./favicon/favicon.ico" type="image/x-icon">
-</head>
-<body>
-  <!-- simple checkbox toggle courtesy of https://endtimes.dev/no-javascript-dark-mode-toggle/ -->
-  <input id="color-toggle" type="checkbox" title="Toggle dark mode" />
-  <div class="theme-wrapper">
-    <header>
-      <h1>This Header Will Stay Here</h1>
-      <nav>
-        <a href="#home">Home</a>
-        <a href="#section-a">Section A</a>
-        <a href="#section-b">Section B</a>
-      </nav>
-    </header>
-    <main>
-      <section id="home">
-        <h2>Home</h2>
-        <p>This is the stuff in the home section.</p>
-      </section>
-      <section id="section-a">
-        <h2>Section A</h2>
-        <p>This is the stuff in section A.</p>
-      </section>
-      <section id="section-b">
-        <h2>Section B</h2>
-        <p>This is the stuff in section B.</p>
-      </section>
-    </main>
-    <footer>
-      <p>footer text that will stay here</p>
-    </footer>
-  </div>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>A Website</title>
+    <link rel="stylesheet" href="./style.css" />
+    <link
+      rel="shortcut icon"
+      href="./favicon/favicon.ico"
+      type="image/x-icon"
+    />
+  </head>
+  <body>
+    <!-- simple checkbox toggle courtesy of https://endtimes.dev/no-javascript-dark-mode-toggle/ -->
+    <input id="color-toggle" type="checkbox" title="Toggle dark mode" />
+    <div class="theme-wrapper">
+      <header>
+        <h1>Devon Wolfkiel</h1>
+        <nav>
+          <a href="#bio">Bio</a>
+          <a href="#resume">Resume</a>
+          <a href="#portfolio">Portfolio</a>
+        </nav>
+        <hr />
+      </header>
+      <main>
+        <section id="bio">
+          <h2>Bio</h2>
+          <p>This is the stuff in the bio section.</p>
+        </section>
+        <section id="resume">
+          <h2>Resume</h2>
+          <p>This is the stuff in the resume section.</p>
+        </section>
+        <section id="portfolio">
+          <h2>Portfolio</h2>
+          <p>This is the stuff in the portfolio section.</p>
+        </section>
+      </main>
+      <footer>
+        <p>footer text that will stay here</p>
+        <nav>
+          <a href="#about-site">About This Site</a>
+        </nav>
+      </footer>
+    </div>
+  </body>
 </html>
